--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <span class="no-gyro feat-support"></span>
             </div>
             <div class="row-body gyro">
+                <button class="row-cta start-gyro">Start</button>
                 <div class="gyro-x"></div>
                 <div class="gyro-y"></div>
                 <div class="gyro-z"></div>
@@ -103,6 +104,7 @@
                 <span class="no-acc feat-support"></span>
             </div>
             <div class="row-body acc">
+                <button class="row-cta start-acc">Start</button>
                 <div class="acc-x"></div>
                 <div class="acc-y"></div>
                 <div class="acc-z"></div>
@@ -115,6 +117,7 @@
                 <span class="no-ori feat-support"></span>
             </div>
             <div class="row-body ori">
+                <button class="row-cta start-ori">Start</button>
                 <div class="ori-text"></div>
             </div>
         </div>
