with vibration api

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="row">
             <div class="row-head">
-                <span>Device Orientation API</span>
+                <span>Device Orientation API:</span>
             </div>
             <div class="row-body device-ori">
                 <div class="device-ori-abs"></div>
@@ -136,13 +136,24 @@
 
         <div class="row">
             <div class="row-head">
-                <span>Device Motion API</span>
+                <span>Device Motion API:</span>
             </div>
             <div class="row-body device-motion">
                 <div class="device-motion-acc"></div>
                 <div class="device-motion-acc-g"></div>
                 <div class="device-motion-rotation"></div>
                 <div class="device-motion-interval"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="row-head">
+                <span>Vibration API:</span>
+                <span class="no-vib feat-support"></span>
+            </div>
+            <div class="row-body">
+                <button class="row-cta start-vib-single">Single</button>
+                <button class="row-cta start-vib-multiple">Multiple</button>
             </div>
         </div>
     </div>
