--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row-body video">
                 <div class="row-cta-wrap">
                     <button class="row-cta get-camera">Start</button>
-                    <button class="row-cta reset-camera">Stop</button>
+                    <button class="row-cta reset-camera" disabled>Stop</button>
                 </div>
                 <div>
                     <video class="my-video"></video>
