--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                 <span class="no-ori feat-support"></span>
             </div>
             <div class="row-body ori">
-                <button class="row-cta start-ori">Start</button>
-                <button class="row-cta stop-ori" disabled>Stop</button>
+                <div class="row-cta-wrap">
+                    <button class="row-cta start-ori">Start</button>
+                    <button class="row-cta stop-ori" disabled>Stop</button>
+                </div>
                 <div class="ori-text"></div>
             </div>
         </div>
